--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,7 +7,7 @@ ServerName=Microsoft-IIS/6.0
 EnableGzip=true
 StaticExtensionsToGzip=.css, .js
 EnableXSRF=false
-XSRFKEY=trytv_xsrf
+XSRFKEY=not_for_jerk
 sessionon=true
 sessionprovider=memory
 sessionname=haitou_cc
