--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,6 @@
-appname = your_web_app
-httpport = 9999
-runmode = prod
+appname=your_web_app
+httpport=9999
+runmode=dev
 flashname=trytv
 FlashSeperator=ez
 ServerName=Microsoft-IIS/6.0
@@ -8,7 +8,7 @@ EnableGzip=true
 StaticExtensionsToGzip=.css, .js
 EnableXSRF=true
 XSRFKEY=not_for_jerk
-xsrfexpire = 1200
+xsrfexpire = 600
 sessionon=true
 sessionprovider=memory
 sessionname=session
@@ -17,3 +17,4 @@ mysqlpass=ZHou1987
 mysqlurls=115.28.94.157
 mysqlport=3306
 mysqldb=trytv
+cdnhost=http://static.trytv.org/static/
