--- a/conf/app.conf
+++ b/conf/app.conf
@@ -17,4 +17,4 @@ mysqlpass=ZHou1987
 mysqlurls=115.28.94.157
 mysqlport=3306
 mysqldb=trytv
-cdnhost=http://static.trytv.org/static/
+cdnhost=/static/
