搞定了一些爬虫的框架

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -16,5 +16,5 @@ mysqluser=alialiali
 mysqlpass=ZHou1987
 mysqlurls=115.28.94.157
 mysqlport=3306
-mysqldb=trytv
+mysqldb=tvinfo
 #cdnhost=https://oeveb4zm9.qnssl.com/
