--- a/conf/app.conf
+++ b/conf/app.conf
@@ -17,4 +17,6 @@ mysqlpass=ZHou1987
 mysqlurls=115.28.94.157
 mysqlport=3306
 mysqldb=trytv
+imageCdnHost=https://oeveb4zm9.qnssl.com/
+pagesize=30
 #cdnhost=https://oeveb4zm9.qnssl.com/
