--- a/conf/app.conf
+++ b/conf/app.conf
@@ -19,4 +19,6 @@ mysqlport=3306
 mysqldb=trytv
 imageCdnHost=https://oeveb4zm9.qnssl.com/
 pagesize=30
+keyword=美剧学习kkkkk
+description=美剧学习dscrip
 #cdnhost=https://oeveb4zm9.qnssl.com/
