--- a/conf/app.conf
+++ b/conf/app.conf
@@ -17,7 +17,8 @@ mysqlpass=ZHou1987
 mysqlurls=115.28.94.157
 mysqlport=3306
 mysqldb=trytv
-imageCdnHost=https://oeveb4zm9.qnssl.com/
+#imageCdnHost=https://oeveb4zm9.qnssl.com/
+imageCdnHost=http://img.trytv.org/
 pagesize=30
 keyword=美剧学习kkkkk
 description=美剧学习dscrip
