--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,6 @@
 appname=mojotv
 httpport=9999
-runmode=prod
+runmode=dev
 flashname=trytv
 FlashSeperator=ez
 ServerName=mojotvAwesomeServer
@@ -21,7 +21,7 @@ keyword=mojotv.cn|
 description=欧美娱乐资讯
 #cdnhost=https://oeveb4zm9.qnssl.com/
 [dev]
-mysqluser=root
+mysqluser=alialiali
 mysqlpass=ZHou1987
 mysqlurls=115.28.94.157
 [prod]
