--- a/conf/app.conf
+++ b/conf/app.conf
@@ -12,7 +12,8 @@ xsrfexpire = 1200
 sessionon=true
 sessionprovider=memory
 sessionname=session
-
+#session有效期
+sessiongcmaxlifetime=2600000
 mysqlport=3306
 mysqldb=trytv
 #imageCdnHost=https://oeveb4zm9.qnssl.com/
